--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
 }
 /* --- Swiper Navigation --- */
 .custom-swiper .swiper-button-next,
@@ -32,6 +33,7 @@ body {
   backdrop-filter: blur(4px);
   border-radius: 9999px;     /* дугуй хэлбэртэй болгох */
   width: 40px;
+  padding: 10px;
   height: 40px;
   transition: all 0.3s ease;
 }
